greet-service/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: greet-ingress
  namespace: greet
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - greeting-api.acme.co
    secretName: greet-tls
  rules:
  - host: greeting-api.acme.co
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: greet
            port:
              number: 80
